2003-06-08  Martin Baulig  <martin@ximian.com>

	* configure.in: Tell libgc's configure about our threads library.

2003-06-08  Martin Baulig  <martin@ximian.com>

	* libgc/: Integrate the libgc module here.

	[Note: A simple `cvs update' won't work this time; you either need
	to re-checkout the `mono' module or manually move the `libgc'
	module here.]

	* configure.in (--with-gc): Added `included' option to use the
	included libgc.  This is now also the default.
	(LIBGC_CFLAGS, LIBGC_LIBS): Put the libgc stuff here and AC_SUBST it.
	(INCLUDED_LIBGC): New automake conditional.
	(USE_INCLUDED_LIBGC): #define this if appropriate.

	* autogen.sh: Run libgc/autogen.sh.

	* Makefile.am (SUBDIRS): Added libgc.

2003-06-05  Duncan Mak  <duncan@ximian.com>

	* mono.spec.in (Requires): Add libxml2 and libxslt dependency on
	the package.

2003-05-19  Dick Porter  <dick@ximian.com>

	* configure.in: Netbsd build fix by marc@informatik.uni-bremen.de.

2003-05-10  Martin Willemoes Hansen <mwh@sysrq.dk>

	* scripts/Makefile.am: Added monoresgen secutil sqlsharp
	  shell wrapper scripts.

2003-05-08  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/Makefile.am: 
	- Compile with mcs.
	- Disable some warnings.
	- Added executables to clean target.
	- Make testjit the default target.
	- Print list of failed tests at the end of a test run.
	- Abort tests when Ctrl-C is pressed.

	* mono/tests/test-driver: Return with a special exit code when 
	SIGINT is detected.

	* mono/tests/checked.cs: Make it compile.
	
2003-05-02  Miguel de Icaza  <miguel@ximian.com>

	* runtime/Makefile.am ($(monobins_DATA)): Use explicit file names
	for the target exe binaries.

	Copy cilc.exe and secutil.exe from the right paths to the right
	location.

	Add missing assemblies.

2003-05-02  Alp Toker  <alp@atoker.com>

	* data/config.in: new dll mapping entry for libglade

2003-05-01  Duncan Mak  <duncan@ximian.com>

	* scripts/Makefile.am: 
	* runtime/Makefile.am: Install cilc and ilasm.
