@@ -20,3 +20,4 @@
 #undef MONO_SIZEOF_SUNPATH
 #undef NEED_LINK_UNLINK
 #undef PTHREAD_POINTER_ID
+#undef HAVE_GC_H
